-- NaviUtilities::limit has been added. It is a simple, templated helper that limits a number between two numbers.
-- NaviUtilities::MultiValue is a new variant class (formerly NaviDataValue)
-- NaviUtilities::Args is a new InlineVector, similar to NaviUtilities::Strings, but can take several different types (MultiValue).
-- NaviUtilities::stringTemplate and logTemplate have been added.
- In NaviDemo:
-- Has been greatly modified to use the new interface scheme. Look to it for suggestions on how to implement the new changes.
- In the VC8 Solution:
-- Two new configurations: Release DLL and Debug DLL. If you intend to use these configurations, you must define the preprocessor macro 'NAVI_DYNAMIC_LIB' in your application, link to 'Navi_DLL.lib' (use 'Navi_d_DLL.lib' for debug), and copy 'Navi.dll' (use 'Navi_d.dll' for debug) to your application's working directory.

Core Changes since v1.4:
- New template class 'NaviLibrary::Singleton' has been created to make the NaviManager Singleton safer and more manageable. It is mostly a carbon-copy of Ogre's Singleton except with different accessors (Singleton::Get()/Singleton::GetPointer()) and verbose exceptions.
- DLL support!
- Much of the code in Navi, NaviManager, and NaviMouse has been refactored/simplified.
- NaviMouse now supports arbitrary widths/heights of cursors
- NaviDemo has been refactored, the debug overlay has been minimized, and the scene has been changed up.

Bugfixes since v1.4:
- Textures loaded from an image refuse to give up their data via read-only locks in OpenGL-mode in Ogre3D. (Thus, Navis with masks would be invisible in OpenGL). A workaround has been applied.
- NaviMouse now properly restores its internal texture when it has been lost (usually after a window resize).
- Several VC7 incompatibilities have been resolved under the guidance of g6r6e6g.

Current Version: NaviLibrary v1.4

API Changes since v1.3:
- In NaviManager:
-- NaviManager::StartupMouse has a new, optional 'visible' parameter